[package]
name = "is_tuesday"
version = "0.1.0"
edition = "2021"
authors = ["wildanrfq"]
license = "MIT"
repository = "https://github.com/danrfq/is_tuesday"
description = "A crate to check if the current day is Tuesday."

[dependencies]
chrono = "0.4.24"

[[test]]
name = "check-test"
path = "tests/test.rs"